change of library

--- a/config/cmake/README.txt.cmake.in
+++ b/config/cmake/README.txt.cmake.in
@@ -100,8 +100,7 @@ Execute the test.sh script.
 
 ===========================================================================
 
-Documentation for all HDF software is available at:
-
-   https://support.hdfgroup.org/documentation/index.html
+Documentation for this release can be found at the following URL:
+    https://portal.hdfgroup.org/display/support
 
 Bugs should be reported to help@hdfgroup.org.
